style.css
html {
    scroll-behavior: smooth;
}
:root {
    --dark-colour-one: #373737;
    --dark-color-two: #C0B283;
    --light-color-one: #F1E5D675;
    --light-colour-two: #F4F4F4;
}
body {
  margin:0;
  padding:0;
  font-family:'Ubuntu', sans-serif;
  font-size:1.3rem;
}
section, .home, .about, .team, .contact {
    height: 100vh;
    padding-top: 85px;
}

.company-name {
  font-size:3.5rem;
  padding-left:10px;
  margin:0;
  float:left;
  font-family:'Barriecito', cursive;
}
.company-name a {
    text-decoration: none;
    color: var(--light-colour-two)
}

.company-name a:hover {
  color: #2086b0;
}

.nav-header {
    align-items: center;
    background-color: var(--dark-colour-one);
    width: 100%;
    height: 80px;
    position: fixed;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    top:0;
}

.nav-list {
    font-family:'Barriecito', cursive;
    list-style: none;
    display:grid;
    grid-auto-flow:column;
    text-transform: uppercase;
    margin-left:20vw;

}
.nav-list a {
    text-decoration: none;
    color: var(--light-colour-two)

}

.nav-list a:hover {
  color: #2086b0;
}
ul li a {
    text-decoration: none;
    color: var(--dark-colour-one);
}
.nav-list li, ul li {
    display: inline;
}

h2 {
  text-shadow: 3px 3px #A9A9A9;
}

.home p:first-of-type {
  color: #FE4164;
  font-weight:bold;
  text-shadow: 2px 2px #373737;
  display:inline-block;
  border-width: 1px;
  border-style: dashed;
  border-color: #ff0000;
  font-size:2rem;
}

.sub-intro {
  font-weight:bold;
  text-shadow: 2px 2px #A9A9A9;
}
.home, .team {
    background-color: var(--light-color-one);
}
.about, .contact {
    background-color: var(--lght-color-two);
}

.about p {
  padding-right: 25px;
  padding-left: 25px;
  text-align:center;
}

.home header {
  text-align: center;

}

.about header, .team header, .contact header {
    text-transform: uppercase;
    font-size: 1.2em;
    font-weight: bold;
    text-align: center;
}

.about article {
    max-width: 600px;
    margin:auto;
    margin-top:100px;
}

.team article header {
    text-align: left;
    font-size: 1em;
}
.team ul {
    display:flex;
    justify-content: center;
    padding: 0;
    align-items: flex-start;
}

.team-avatars {
  margin-top: 150px;
  display: flex;
  justify-content: space-around;
  align-items: center;

}
.team-avatars img {
  max-width: 200px;
  border-radius: 50%;
}

.team-avatars img:hover {
  animation-name:resize;
  animation-duration:0.8s;
}

@keyframes resize {
  from {box-shadow:none;}
  to {box-shadow: 5px 5px #FE4164;}

}

.team article img {
    max-width: 150px;
    border-radius: 50%;
    padding-right: 30px;

}
.team ul img {
    height: 50px;
    padding:5px;
}
.profiles div {
    display: flex;
    justify-content: flex-start;
    align-items: flex-end;
}

.profiles {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}
.team p {
    max-width: 80%;
}

.team article {
    width:45%;
    max-height: 100vh;
   }

.name-text{
  color:#FE4164;
}

.contact p {
    text-align: center;
}

.contact form {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(5, 1fr);
    grid-column-gap: 5px;
    grid-row-gap: 15px;
    align-items: center;
    background-color:#2086b0;
    padding: 15px 15px;
    max-width: 500px;
    margin: auto;
}
.contact input, .contact textarea{
    align-self: stretch;
    border: 1px solid black;
}
.contact label {
    text-align: right;
    color: white;
}

nav li a {
    padding: 5px;
}

@media screen and (max-width: 900px) {
    .team article {
        font-size: 1em;
        padding-left: 10px;
    }
    .about header, .team header, .contact header {
        font-size: 0.8em;
    }
    .profiles article ul li img {
        max-width: 25px;
        max-height: 25px;
    }
    .profiles div {
        align-items: center;
    }

    .team-avatars img {
        max-width: 130px;
      }
    .team {
        display: flex;
        flex-direction: column;
    }
    .team article {
        width: 100%;
    }
    .team article img {
        max-width: 50px;
        float: left;
        padding-right: 5px;
    }
    .profiles {
    flex-direction: row;
    flex-wrap: none;
    overflow: hidden;
    }
}

@media screen and (max-width: 600px) {
    nav li a {
        font-size: 0.9em;
    }
    .team article {
        font-size: 0.6em;
        padding-left: 5px;
    }
    .about header, .team header, .contact header {
        font-size: 0.6em;
    }
    .profiles article ul li img {
        max-width: 25px;
        max-height: 25px;
    }
    .profiles div {
        align-items: center;
    }
    .team-avatars img {
        max-width: 80px;
      }
    .team {
        display: flex;
        flex-direction: column;
    }
    .team article {
        width: 100%;
    }
    .team article img {
        max-width: 50px;
        float: left;
        padding-right: 5px;
    }
    .about {
        font-size: 0.8em;
    }
    .profiles {
    flex-direction: row;
    flex-wrap: none;
    overflow: hidden;
    }
    .nav-list {
        margin-left: 0;
        padding-left:5px;
        font-size: 0.7em;
    }
}

